Fix hamburger menu on iphone

--- a/resources/frontend/sass/themes/_header.scss
+++ b/resources/frontend/sass/themes/_header.scss
@@ -93,6 +93,7 @@
 
     &__left {
       left: 0;
+      right: unset;
     }
 
     .hamburger-inner,
